--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.14",
     "nodemailer": "^6.7.7",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "swagger-ui-express": "^4.5.0"
   }
 }
